--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 <body>
     <header>
-        <img src="images/CL-Mainimage.png" alt="" class="logo">
+        <img src="images/CL-logo.png" alt="" class="logo">
+
+        <div class="blog-post">
+                <div class="blog-post__img">
+                    <img src="images/IMG_5080.jpg" class="Andrew" alt="">
+                </div>
+                <div class="blog-post__info">
+                    <div class="blog-post__date">
+                        <span>Jeudi</span>
+                        <span>O5.12.19</span>
+                    </div>
+                    <h1 class="blog-post__title">Christ</h1>
+                    <p class="blog-post__texte">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        d explicabo ab praesentium dolorem officiis suscipit. 
+                        Aperiam enim vero repellat voluptatem et, 
+                        eveniet fuga assumenda commodi accusamus ad nisi laborum nemo?
+                    </p>
+                    <a href="#" class="blog-post__cta">En savoir plus</a>
+                </div>
+            </div>
         
     </header>
 </body>
